<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_grad"
    tools:context="edu.aku.hassannaqvi.mnch_src.MainPage">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:background="#d6d6d6"
        android:scrollbars="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="edu.aku.hassannaqvi.mnch_src.MainPage">

            <TextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <Button
                android:id="@+id/btnOpenForm"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenForm"
                android:text="@string/btnOpenForm" />

            <Button
                android:id="@+id/btnSyncData"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:text="@string/btnSyncData" />

            <Button
                android:id="@+id/btnDBAccess"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenDBAccess"
                android:text="@string/btnDBAccess" />

            <Button
                android:id="@+id/ShowSec2"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection2"
                android:text="@string/sec2" />

            <Button
                android:id="@+id/ShowSec3"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection3"
                android:text="@string/sec3" />

            <Button
                android:id="@+id/ShowSec4"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection4"
                android:text="@string/sec4" />

            <Button
                android:id="@+id/ShowSec5"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection5"
                android:text="@string/sec5" />

            <Button
                android:id="@+id/ShowSec6"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection6"
                android:text="@string/sec6" />

            <Button
                android:id="@+id/ShowSec7"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection7"
                android:text="@string/sec7" />

            <Button
                android:id="@+id/ShowSec8"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="OpenSection8"
                android:text="@string/sec8" />

            <Button
                android:id="@+id/btnLogout"
                style="@style/btn"
                android:layout_marginTop="20dp"
                android:onClick="Logout"
                android:text="@string/btnLogout" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>